# g-golf

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  autogen.sh  configure.ac  env.in  g-golf.scm  pre-inst-env.in
am/: guile.mk
doc/: Makefile.am  api-abreviations.texi  api-arg-info.texi  api-base-info.texi  api-callable-info.texi  api-common-types.texi  api-constant-info.texi  api-enum-info.texi  api-field-info.texi  api-function-info.texi  api-gdk-event-structures.texi  api-gdk-events.texi  api-gdk-key-values.texi  api-gdk.texi  api-gir.texi  api-glib-glist.texi  api-glib-gslist.texi  api-glib-io-channels.texi  api-glib-main-event-loop.texi  api-glib-mem-alloc.texi  api-glib-quarks.texi  api-glib-unix-utils.texi  api-glib.texi  api-gobject-closures.texi  api-gobject-enum-flags.texi  api-gobject-g-param-spec.texi  api-gobject-gen-vals.texi  api-gobject-gobject.texi  api-gobject-param-spec.texi  api-gobject-params-vals.texi  api-gobject-signals.texi  api-gobject-type-info.texi  api-gobject.texi  api-goops-notes-and-conventions.texi  api-hl-api-closure.texi  api-hl-api-function.texi  api-hl-api-gobject.texi  api-hl-api-gtype.texi  api-hl-api-import.texi  api-hl-api-object.texi  (+32 more)
doc/css/: manual.css
g-golf/: gdk.scm  gi.scm  glib.scm  gobject.scm  goops.scm  hl-api.scm  init.scm  support.scm
g-golf/gdk/: event-structures.scm  events.scm  key-values.scm
g-golf/gi/: arg-info.scm  base-info.scm  cache.scm  callable-info.scm  common-types.scm  constant-info.scm  enum-info.scm  field-info.scm  function-info.scm  glib.scm  gobject.scm  init.scm  object-info.scm  property-info.scm  registered-type-info.scm  repository.scm  signal-info.scm  struct-info.scm  type-info.scm  typelib.scm  types.scm  union-info.scm  utils.scm
g-golf/gi/glib/: mem-alloc.scm
g-golf/gi/gobject/: enum-flags.scm  type-info.scm  types.scm
g-golf/glib/: glist.scm  gslist.scm  io-channels.scm  main-event-loop.scm  mem-alloc.scm  quarks.scm  unix-utils.scm
g-golf/gobject/: closures.scm  enum-flags.scm  generic-values.scm  gobject.scm  gvalue.scm  param-spec.scm  params-vals.scm  signals.scm  type-info.scm  types.scm
g-golf/goops/: gtype.scm
g-golf/hl-api/: callback.scm  closure.scm  function.scm  glib.scm  gobject.scm  gtype.scm  import.scm  object.scm  signal.scm
g-golf/support/: bytevector.scm  c-union.scm  enum.scm  flag.scm  float.scm  g-export.scm  goops.scm  keyword.scm  libg-golf.scm  modules.scm  push.scm  struct.scm  union.scm  utils.scm
gbank/: gi.scm  support.scm
gbank/gi/: arg-info.scm  base-info.scm  callable-info.scm  enum-info.scm  glib.scm  gobject.scm  init.scm  registered-type-info.scm  repository.scm  type-info.scm  typelib.scm  types.scm  utils.scm
gbank/gi/glib/: mem-alloc.scm
gbank/gi/gobject/: enum-flags.scm  type-info.scm
gbank/support/: enum.scm  g-export.scm  goops.scm  keyword.scm  modules.scm  push.scm  utils.scm
libg-golf/: Makefile.am  libg-golf.c  libg-golf.h  libg_golf_la-libg-golf.lo
m4/: guile.m4  makeinfo.m4
meta/: g-golf-1.0.pc.in  gbank-1.0.pc.in  guild.in
org/: g-golf-bugs.org  g-golf.org  gbank-bugs.org  gbank.org
test-suite/: Makefile.am
test-suite/tests/: gi.scm  glib.scm  gobject.scm  hl-api.scm  support.scm
