
####
#### Copyright (C) 2016
#### Free Software Foundation, Inc.

#### This file is part of GNU G-Golf

#### GNU G-Golf is free software; you can redistribute it and/or modify
#### it under the terms of the GNU Lesser General Public License as
#### published by the Free Software Foundation; either version 3 of the
#### License, or (at your option) any later version.

#### GNU G-Golf is distributed in the hope that it will be useful, but
#### WITHOUT ANY WARRANTY; without even the implied warranty of
#### MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#### Lesser General Public License for more details.

#### You should have received a copy of the GNU Lesser General Public
#### License along with GNU G-Golf.  If not, see
#### <https://www.gnu.org/licenses/lgpl.html>.
####


AUTOMAKE_OPTIONS = gnu

info_TEXINFOS = g-golf.texi

gbank_TEXINFOS = \
  version.texi			\
  variables.texi		\
  preface.texi     		\
  introduction.texi		\
  using-g-golf.texi		\
  api-base-info.texi		\
  api-callable-info.texi	\
  api-overview.texi		\
  api-repository.texi		\
  api-support-modules.texi	\
  api.texi			\
  indices.texi			\
  fdl.texi
