
####
#### Copyright (C) 2016 - 2019
#### Free Software Foundation, Inc.

#### This file is part of GNU G-Golf

#### GNU G-Golf is free software; you can redistribute it and/or modify
#### it under the terms of the GNU Lesser General Public License as
#### published by the Free Software Foundation; either version 3 of the
#### License, or (at your option) any later version.

#### GNU G-Golf is distributed in the hope that it will be useful, but
#### WITHOUT ANY WARRANTY; without even the implied warranty of
#### MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#### Lesser General Public License for more details.

#### You should have received a copy of the GNU Lesser General Public
#### License along with GNU G-Golf.  If not, see
#### <https://www.gnu.org/licenses/lgpl.html>.
####


AUTOMAKE_OPTIONS = gnu

info_TEXINFOS = g-golf.texi

g_golf_TEXINFOS = \
  version.texi			\
  variables.texi		\
  preface.texi     		\
  introduction.texi		\
  using-g-golf.texi		\
  api.texi			\
  api-overview.texi		\
  api-naming-conventions.texi	\
  api-pro-doc-struct.texi	\
  api-goops-notes-and-conventions.texi	\
  api-glib.texi			\
  api-glib-mem-alloc.texi	\
  api-glib-main-event-loop.texi \
  api-glib-glist.texi		\
  api-glib-gslist.texi		\
  api-gobject.texi		\
  api-gobject-type-info.texi	\
  api-gobject-gobject.texi	\
  api-gobject-enum-flags.texi	\
  api-gobject-gen-vals.texi	\
  api-gobject-params-vals.texi  \
  api-gobject-param-spec.texi	\
  api-gobject-closures.texi	\
  api-gobject-signals.texi	\
  api-gir.texi			\
  api-repository.texi		\
  api-common-types.texi		\
  api-base-info.texi		\
  api-callable-info.texi	\
  api-signal-info.texi		\
  api-function-info.texi	\
  api-registered-type-info.texi	\
  api-enum-info.texi		\
  api-struct-info.texi		\
  api-object-info.texi		\
  api-arg-info.texi		\
  api-field-info.texi		\
  api-property-info.texi	\
  api-type-info.texi		\
  api-typelib.texi		\
  api-utilities.texi		\
  api-support.texi		\
  api-support-modules.texi	\
  api-support-goops.texi	\
  api-support-enum.texi		\
  api-support-flag.texi		\
  api-support-struct.texi	\
  api-support-union.texi	\
  api-support-utils.texi	\
  api-hl-api.texi		\
  api-hl-api-gtype.texi		\
  api-hl-api-gobject.texi	\
  api-hl-api-function.texi	\
  api-hl-api-object.texi	\
  api-hl-api-import.texi	\
  indices.texi			\
  fdl.texi
